<?xml version="1.0" encoding="utf-8"?>
<!--
    I went with a ConstraintLayout here because I may have had to create at least 3 horizontal
    LinearLayouts nested in a vertical LinearLayout.
-->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/login_fragment_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="true"
            android:focusableInTouchMode="true"
            tools:context=".screens.login.LoginFragment"
            tools:ignore="ScrollViewSize">

            <TextView
                android:id="@+id/email_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_margin_start"
                android:layout_marginEnd="@dimen/default_margin_end"
                android:labelFor="@id/email_edit_text"
                android:text="@string/login_email_label_text"
                android:textAlignment="textEnd"
                app:layout_constraintBaseline_toBaselineOf="@+id/email_edit_text"
                app:layout_constraintEnd_toStartOf="@+id/email_edit_text"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/email_edit_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/default_margin_end"
                android:layout_marginBottom="@dimen/default_margin_bottom"
                android:inputType="textEmailAddress"
                app:layout_constraintBottom_toTopOf="@+id/password_edit_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/verticalGuideLine"
                tools:ignore="Autofill" />

            <TextView
                android:id="@+id/password_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_margin_start"
                android:layout_marginEnd="@dimen/default_margin_end"
                android:labelFor="@id/password_edit_text"
                android:text="@string/login_password_label_text"
                android:textAlignment="textEnd"
                app:layout_constraintBaseline_toBaselineOf="@+id/password_edit_text"
                app:layout_constraintEnd_toStartOf="@+id/password_edit_text"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/password_edit_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/default_margin_end"
                android:inputType="textPassword"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@+id/verticalGuideLine"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="Autofill" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/verticalGuideLine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="100dp" />

            <Button
                android:id="@+id/new_login_button"
                style="@style/primaryButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_margin_start"
                android:layout_marginEnd="@dimen/default_margin_end"
                android:layout_marginBottom="@dimen/default_margin_bottom"
                android:text="@string/login_new_login_button_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/existing_login_button"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/existing_login_button"
                style="@style/primaryButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_margin_start"
                android:layout_marginEnd="@dimen/default_margin_end"
                android:layout_marginBottom="@dimen/default_margin_bottom"
                android:text="@string/login_existing_account_button_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/new_login_button" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>